# ugv_beast

./: .gitignore  PYNAVIGATION.md  PYPROGRESS.md  README.md
src/phone_sensor_bridge/: package.xml  setup.cfg  setup.py
src/phone_sensor_bridge/config/: bridge_params.yaml
src/phone_sensor_bridge/launch/: phone_sensor_bridge.launch.py
src/phone_sensor_bridge/phone_sensor_bridge/: bridge.py  mock_phone.py
src/ugv_base/: package.xml  setup.py
src/ugv_base/config/: motor_params.yaml
src/ugv_base/launch/: ugv_base.launch.py
src/ugv_base/ugv_base/: battery_monitor.py  motor_driver.py  teleop_watchdog.py
src/ugv_bringup/: package.xml  setup.py
src/ugv_bringup/config/: cyclonedds.xml  ugv.rviz
src/ugv_bringup/launch/: robot.launch.py  robot_dev.launch.py
src/ugv_bringup/scripts/: deploy.sh  setup_pi.sh
src/ugv_bringup/systemd/: ugv_hotspot.service  ugv_robot.service
src/ugv_interfaces/: CMakeLists.txt  package.xml
src/ugv_interfaces/action/: DeliverPackage.action  ReturnHome.action
src/ugv_interfaces/msg/: BatteryState.msg  DeliveryStatus.msg  MotorStatus.msg  WifiStatus.msg
src/ugv_interfaces/srv/: EmergencyStop.srv  GetDeliveryStatus.srv  SetDeliveryWaypoints.srv
src/ugv_localization/: package.xml  setup.py
src/ugv_localization/config/: ekf.yaml
src/ugv_localization/launch/: localization.launch.py  static_tf.launch.py
src/ugv_localization/ugv_localization/: localization_watchdog.py
src/ugv_navigation/: package.xml  setup.py
src/ugv_navigation/config/: nav2_params.yaml
src/ugv_navigation/launch/: navigation.launch.py
src/ugv_navigation/missions/: example_mission.yaml
src/ugv_navigation/ugv_navigation/: mission_manager.py  waypoint_converter.py
src/ugv_perception/: package.xml  setup.py
src/ugv_perception/config/: scan_filter.yaml
src/ugv_perception/launch/: perception.launch.py
src/ugv_vision/: package.xml  setup.py
src/ugv_vision/config/: vision_params.yaml
src/ugv_vision/launch/: vision.launch.py
src/ugv_vision/ugv_vision/: vision_server_node.py
