<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phone_sensor_bridge</name>
  <version>1.0.0</version>
  <description>WebSocket client bridge: phone app GPS + IMU → ROS 2 topics</description>
  <maintainer email="robot@delivery.local">UGV Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>ugv_interfaces</depend>

  <!-- websockets is a pure-Python asyncio library -->
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
