<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_navigation</name>
  <version>1.0.0</version>
  <description>Nav2 outdoor configuration, GPS waypoint mission executor, and delivery state machine</description>
  <maintainer email="robot@delivery.local">UGV Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_localization</depend>
  <depend>action_msgs</depend>
  <depend>ugv_interfaces</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
