<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_perception</name>
  <version>1.0.0</version>
  <description>RPLIDAR C1 driver integration and outdoor laser filter chain</description>
  <maintainer email="robot@delivery.local">UGV Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_filters</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>ros-jazzy-laser-filters</exec_depend>

  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
