<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_vision</name>
  <version>1.0.0</version>
  <description>
    Vision obstacle-avoidance bridge for the WaveShare UGV Rover.
    Streams the USB camera over HTTP/MJPEG, receives AI commands from the
    laptop, and routes them into the ROS2 cmd_vel stack via teleop_watchdog.
  </description>
  <maintainer email="ubuntu@rover.local">ubuntu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_pep8</test_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
